# effort-atlas

./: .gitignore  CAP_SEMANTICS.md  CITATION.cff  CONFIRMATORY_PREFLIGHT.md  LICENSE  METHODS_BRIEF.md  OUTREACH_PACKET.md  OUTREACH_RESEARCH.md  PREREGISTRATION.md  PREREGISTRATION_AMENDMENT_2026-07-22.md  README.md  RESEARCH_LOG.md  TRUNCATION_STUDY.md  config.yaml  config_cap_gptoss.yaml  config_cap_inkling.yaml  config_cap_kimi26.yaml  config_confirmatory.yaml  config_grok45_cap.yaml  config_openrouter.yaml  config_openrouter_rescue.yaml  config_tinker_rescue.yaml  pyproject.toml  requirements.txt  thinking-cut-short-explainer.tldraw
confirmatory_artifacts/: README.md
confirmatory_artifacts/preflight-2026-07-22/: README.md  glm52_together_main_schedule.json  inkling_together_main_schedule.json  schedule_manifest.json
confirmatory_artifacts/preflight-2026-07-22-amended/: README.md  glm52_together_smoke_schedule.json  inkling_together_smoke_schedule.json  schedule_manifest.json
pilot/: PLAYGROUND_FINDINGS.md  pilot_prompts.md  pilot_prompts_round2.md  playground_results.jsonl  tally.csv  tally_round2.csv
public_artifacts/: README.md
public_artifacts/cap-semantics-2026-07-21/: README.md  dataset_manifest.json  manifest.json  receipts.jsonl  results.jsonl
src/effort_atlas/: __init__.py  analyze.py  client.py  confirmatory.py  data_gen.py  fetch_data.py  get_sampler_path.py  graders.py  invalidate_capped.py  openrouter_receipts.py  openrouter_status.py  (+3 more)
tests/: test_confirmatory.py  test_openrouter_support.py  test_public_artifacts.py  test_rescue_analysis.py
